--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hello_world",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
